--- a/res/layout/question_item.xml
+++ b/res/layout/question_item.xml
@@ -8,7 +8,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight=".15"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -19,7 +20,17 @@
             android:layout_width="0dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
-            android:layout_weight=".25" />
+            android:layout_weight=".75" />
+
+        <TextView
+            android:id="@+id/question_votes"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight=".25"
+            android:gravity="right"
+            android:paddingRight="5dp"
+            android:textColor="@color/ans_per_color" />
 
     </LinearLayout>
     
