--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -35,4 +35,9 @@
     <color name="ans5_color">#FFFF6699</color>
     
     <color name="ans_per_color">#FFAAAAAA</color>
+    
+    <color name="swipe_color_1">#ff00ddff</color>
+    <color name="swipe_color_2">#ff99cc00</color>
+    <color name="swipe_color_3">#ffffbb33</color>
+    <color name="swipe_color_4">#ffff4444</color>
 </resources>
