--- a/res/layout/question_item.xml
+++ b/res/layout/question_item.xml
@@ -8,29 +8,67 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".15"
+        android:layout_height="50dp"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingTop="5dp" >
-        
-        <TextView
-            android:id="@+id/user_text"
-            android:layout_width="0dp"
-            android:layout_height="20dp"
+
+        <ImageView
+            android:id="@+id/q_profile_pic"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/unknown" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_weight=".75" />
+            android:layout_marginLeft="5dp"
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp" >
+
+            <TextView
+                android:id="@+id/user_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight=".5"
+                android:text="Eldho George" />
+
+            <TextView
+                android:id="@+id/q_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight=".5"
+                android:text="5 Hours"
+                android:textColor="@color/ans_per_color"
+                android:textSize="10dp" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/question_votes"
             android:layout_width="0dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
-            android:layout_weight=".25"
+            android:layout_marginRight="5dp"
+            android:layout_weight=".5"
             android:gravity="right"
             android:paddingRight="5dp"
+            android:text="votes: 250"
             android:textColor="@color/ans_per_color" />
+
+        <ImageButton
+            android:id="@+id/more_button"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/custom_button"
+            android:src="@drawable/down" />
 
     </LinearLayout>
     
@@ -71,13 +109,13 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="40dp"
 	        android:background="@drawable/dialog_button"
-	        android:gravity="left|center_vertical" />
+	        android:gravity="left|center_vertical"/>
 
         <FrameLayout
             android:id="@+id/ans1_afterVote"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:padding="0dp"
+            android:padding="0dp" 
             android:visibility="gone" >
 	
 	        <LinearLayout
@@ -127,6 +165,23 @@
 	                android:layout_marginRight="5dp"
 	                android:text="25%"
 	                android:textColor="@color/ans_per_color" />
+
+	            <LinearLayout
+	                android:id="@+id/check1"
+	                android:layout_width="20dp"
+	                android:layout_height="match_parent"
+	                android:padding="0dp" >
+
+	                <ImageView
+	                    android:id="@+id/check_img1"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_gravity="center_vertical"
+	                    android:layout_marginRight="4dp"
+	                    android:src="@drawable/checkmark" 
+            			android:visibility="gone" />
+
+	            </LinearLayout>
 	
 	        </LinearLayout>
 	
@@ -206,6 +261,23 @@
 	                android:layout_marginRight="5dp"
 	                android:text="25%"
 	                android:textColor="@color/ans_per_color" />
+
+	            <LinearLayout
+	                android:id="@+id/check2"
+	                android:layout_width="20dp"
+	                android:layout_height="match_parent"
+	                android:padding="0dp" >
+
+	                <ImageView
+	                    android:id="@+id/check_img2"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_gravity="center_vertical"
+	                    android:layout_marginRight="4dp"
+	                    android:src="@drawable/checkmark" 
+            			android:visibility="gone" />
+
+	            </LinearLayout>
 	
 	        </LinearLayout>
 	
@@ -285,6 +357,23 @@
 	                android:layout_marginRight="5dp"
 	                android:text="25%"
 	                android:textColor="@color/ans_per_color" />
+
+	            <LinearLayout
+	                android:id="@+id/check3"
+	                android:layout_width="20dp"
+	                android:layout_height="match_parent"
+	                android:padding="0dp" >
+
+	                <ImageView
+	                    android:id="@+id/check_img3"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_gravity="center_vertical"
+	                    android:layout_marginRight="4dp"
+	                    android:src="@drawable/checkmark" 
+            			android:visibility="gone" />
+
+	            </LinearLayout>
 	
 	        </LinearLayout>
 	
@@ -364,6 +453,23 @@
 	                android:layout_marginRight="5dp"
 	                android:text="25%"
 	                android:textColor="@color/ans_per_color" />
+
+	            <LinearLayout
+	                android:id="@+id/check4"
+	                android:layout_width="20dp"
+	                android:layout_height="match_parent"
+	                android:padding="0dp" >
+
+	                <ImageView
+	                    android:id="@+id/check_img4"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_gravity="center_vertical"
+	                    android:layout_marginRight="4dp"
+	                    android:src="@drawable/checkmark" 
+            			android:visibility="gone" />
+
+	            </LinearLayout>
 	
 	        </LinearLayout>
 	
@@ -443,6 +549,23 @@
 	                android:layout_marginRight="5dp"
 	                android:text="25%"
 	                android:textColor="@color/ans_per_color" />
+
+	            <LinearLayout
+	                android:id="@+id/check5"
+	                android:layout_width="20dp"
+	                android:layout_height="match_parent"
+	                android:padding="0dp" >
+
+	                <ImageView
+	                    android:id="@+id/check_img5"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_gravity="center_vertical"
+	                    android:layout_marginRight="4dp"
+	                    android:src="@drawable/checkmark" 
+            			android:visibility="gone" />
+
+	            </LinearLayout>
 	
 	        </LinearLayout>
 	
