--- a/res/layout/question_item.xml
+++ b/res/layout/question_item.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
-            android:layout_weight=".5"
+            android:layout_weight=".4"
             android:orientation="vertical"
             android:paddingBottom="5dp"
             android:paddingTop="5dp" >
@@ -59,7 +59,7 @@
             android:layout_weight=".5"
             android:gravity="right"
             android:paddingRight="5dp"
-            android:text="votes: 250"
+            android:text="888 votes"
             android:textColor="@color/ans_per_color" />
 
         <ImageButton
