--- a/res/layout/votes_dialog.xml
+++ b/res/layout/votes_dialog.xml
@@ -4,6 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:id="@+id/votes_pb"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="vertical" >
+
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/votes_list"
         android:layout_width="match_parent"
