--- a/res/layout/question_item.xml
+++ b/res/layout/question_item.xml
@@ -49,18 +49,27 @@
                 android:textSize="10dp" />
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/question_votes"
-            android:layout_width="0dp"
-            android:layout_height="20dp"
+		
+        <LinearLayout
+	        android:layout_width="0dp"
+            android:layout_height="32dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="5dp"
             android:layout_weight=".5"
-            android:gravity="right"
-            android:paddingRight="5dp"
-            android:text="888 votes"
-            android:textColor="@color/ans_per_color" />
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/question_votes"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:background="@drawable/custom_button"
+                android:gravity="right|center_vertical"
+                android:text="888 votes"
+                android:textColor="@color/ans_per_color"
+                android:textSize="12dp" />
+            
+        </LinearLayout>        
 
         <ImageButton
             android:id="@+id/more_button"
