--- a/res/layout/vote_item.xml
+++ b/res/layout/vote_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/actionbar_text"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -15,6 +16,15 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:src="@drawable/unknown" />
+        
+        <ImageView
+            android:id="@+id/vote_pic_img2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/unknown"
+            android:visibility="gone" />
         
         <LinearLayout
 	        android:layout_width="match_parent"
