--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -1,6 +1,24 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fiftyradios.odiyan.HomeFragment" />
+    tools:context="com.fiftyradios.odiyan.HomeFragment"
+    tools:ignore="MergeRootFrame">
+    
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+	    xmlns:tools="http://schemas.android.com/tools"
+	    android:id="@+id/pager"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" />
+
+    <Button
+        android:id="@+id/ask_q_btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/round_button" />
+
+</FrameLayout>
+
