--- a/res/layout/votes_dialog.xml
+++ b/res/layout/votes_dialog.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/actionbar_text"
     android:orientation="vertical" >
 
     <LinearLayout
