--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -40,4 +40,5 @@
     <color name="swipe_color_2">#ff99cc00</color>
     <color name="swipe_color_3">#ffffbb33</color>
     <color name="swipe_color_4">#ffff4444</color>
+    <color name="hint_color">#ffb6b6b6</color>
 </resources>
